# axum-surrealdb-boilerplate

./: .env.example  Cargo.toml  README.md
asb-apps/: Cargo.toml
asb-apps/src/: lib.rs  main.rs
asb-apps/src/v1/auth/: auth_controller.rs  auth_service.rs
asb-apps/src/v1/docs/: docs_controller.rs
asb-entities/: Cargo.toml
asb-entities/src/: lib.rs
asb-entities/src/common/: mod.rs
asb-libs/: Cargo.toml
asb-libs/src/: lib.rs
asb-libs/src/axum/: mod.rs
asb-utils/: Cargo.toml
asb-utils/src/: lib.rs
asb-utils/src/extract_email/: mod.rs
asb-utils/src/response_format/: mod.rs
